--- a/index.html
+++ b/index.html
@@ -460,8 +460,6 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <li><a href="#_running_babashka">Running babashka</a></li>
 </ul>
 </li>
-<li><a href="#shell_integration">Shell integration</a></li>
-<li><a href="#_todo">TODO</a></li>
 </ul>
 </div>
 </div>
@@ -505,6 +503,9 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <pre class="CodeRay highlight"><code>$ git clone https://github.com/borkdude/babashka --recursive
 $ script/compile</code></pre>
 </div>
+</div>
+<div class="paragraph">
+<p>See the babashka <a href="https://github.com/borkdude/babashka/blob/master/doc/build.md">build.md</a> page for details.</p>
 </div>
 </div>
 </div>
@@ -565,37 +566,10 @@ $ script/compile</code></pre>
 </div>
 </div>
 </div>
-<div class="sect1">
-<h2 id="shell_integration">Shell integration</h2>
-<div class="sectionbody">
-
-</div>
-</div>
-<div class="sect1">
-<h2 id="_todo">TODO</h2>
-<div class="sectionbody">
-<div class="ulist">
-<ul>
-<li>
-<p>Command line arguments</p>
-</li>
-<li>
-<p>Creating child processes</p>
-</li>
-<li>
-<p>HTTP requests</p>
-</li>
-<li>
-<p>XML</p>
-</li>
-</ul>
-</div>
-</div>
-</div>
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2020-06-03 17:27:00 +0200
+Last updated 2020-06-03 17:30:55 +0200
 </div>
 </div>
 <style>
