--- a/index.html
+++ b/index.html
@@ -572,8 +572,8 @@ $ script/compile</code></pre>
 <h2 id="child_processes">Child processes</h2>
 <div class="sectionbody">
 <div class="paragraph">
-<p>There are several ways of creating child processes in babashka, but all of them
-are implemented using the <code>java.lang.ProcessBuilder</code> and <code>java.lang.Process</code>
+<p>There are several ways of creating child processes in babashka. All of them are
+implemented using the <code>java.lang.ProcessBuilder</code> and <code>java.lang.Process</code>
 classes. The easiest way to create a process is via <code>clojure.java.shell</code>:</p>
 </div>
 <div class="listingblock">
