--- a/index.html
+++ b/index.html
@@ -599,8 +599,7 @@ user=&gt; (sh <span class="string"><span class="delimiter">&quot;</span><span cl
 output on stdout and the <code>:exit</code> code is <code>1</code>.</p>
 </div>
 <div class="paragraph">
-<p>For more information on <code>clojure.java.shell</code>, read the [API
-documentation](<a href="https://clojure.github.io/clojure/clojure.java.shell-api.html" class="bare">https://clojure.github.io/clojure/clojure.java.shell-api.html</a>).</p>
+<p>For more information on <code>clojure.java.shell</code>, read the <a href="https://clojure.github.io/clojure/clojure.java.shell-api.html">API documentation</a>.</p>
 </div>
 </div>
 </div>
