--- a/index.html
+++ b/index.html
@@ -448,6 +448,7 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <div id="toc" class="toc2">
 <div id="toctitle">Table of Contents</div>
 <ul class="sectlevel1">
+<li><a href="#license">License</a></li>
 <li><a href="#introduction">Introduction</a>
 <ul class="sectlevel2">
 <li><a href="#_target_audience">Target audience</a></li>
@@ -466,6 +467,29 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 </div>
 </div>
 <div id="content">
+<div class="sect1">
+<h2 id="license">License</h2>
+<div class="sectionbody">
+<div class="paragraph">
+<p>Copyright © 2020 Michiel Borkent</p>
+</div>
+<div class="paragraph">
+<p>&lt;a rel="license"
+href="http://creativecommons.org/licenses/by-nc-nd/3.0/deed.en_US"&gt;&lt;img
+alt="Creative Commons License" style="border-width:0"
+src="http://i.creativecommons.org/l/by-nc-nd/3.0/88x31.png" /&gt;&lt;/a&gt;&lt;br /&gt;&lt;span
+xmlns:dct="http://purl.org/dc/terms/" property="dct:title"&gt;This book is licensed
+under a &lt;a rel="license"
+href="http://creativecommons.org/licenses/by-nc-nd/3.0/deed.en_US"&gt;Creative
+Commons Attribution-NonCommercial-NoDerivs 3.0 Unported License&lt;/a&gt;.</p>
+</div>
+<div class="paragraph">
+<p>Please note that because this is a <strong>No Derivatives</strong> license, you may <strong>not</strong> use
+this repository as a basis for creating your own book based on this
+one.</p>
+</div>
+</div>
+</div>
 <div class="sect1">
 <h2 id="introduction">Introduction</h2>
 <div class="sectionbody">
@@ -606,7 +630,7 @@ output on stdout and the <code>:exit</code> code is <code>1</code>.</p>
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2020-06-03 19:44:38 +0200
+Last updated 2020-06-03 19:53:25 +0200
 </div>
 </div>
 <style>
