--- a/index.html
+++ b/index.html
@@ -473,20 +473,19 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <div class="paragraph">
 <p>Copyright © 2020 Michiel Borkent</p>
 </div>
+<div class="imageblock">
+<div class="content">
+<a class="image" href="http://creativecommons.org/licenses/by-nc-nd/3.0/deed.en_US"><img src="http://i.creativecommons.org/l/by-nc-nd/3.0/88x31.png" alt="Creative Commons License"></a>
+</div>
+</div>
 <div class="paragraph">
-<p>&lt;a rel="license"
-href="http://creativecommons.org/licenses/by-nc-nd/3.0/deed.en_US"&gt;&lt;img
-alt="Creative Commons License" style="border-width:0"
-src="http://i.creativecommons.org/l/by-nc-nd/3.0/88x31.png" /&gt;&lt;/a&gt;&lt;br /&gt;&lt;span
-xmlns:dct="http://purl.org/dc/terms/" property="dct:title"&gt;This book is licensed
-under a &lt;a rel="license"
-href="http://creativecommons.org/licenses/by-nc-nd/3.0/deed.en_US"&gt;Creative
-Commons Attribution-NonCommercial-NoDerivs 3.0 Unported License&lt;/a&gt;.</p>
+<p>This draft of Babashka cookbook is licensed under a
+<a href="http://creativecommons.org/licenses/by-nc-nd/3.0/deed.en_US">Creative Commons
+License</a>.</p>
 </div>
 <div class="paragraph">
 <p>Please note that because this is a <strong>No Derivatives</strong> license, you may <strong>not</strong> use
-this repository as a basis for creating your own book based on this
-one.</p>
+this repository as a basis for creating your own book based on this one.</p>
 </div>
 </div>
 </div>
