--- a/index.html
+++ b/index.html
@@ -449,6 +449,7 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <div id="toctitle">Table of Contents</div>
 <ul class="sectlevel1">
 <li><a href="#license">License</a></li>
+<li><a href="#contributing">Contributing</a></li>
 <li><a href="#introduction">Introduction</a>
 <ul class="sectlevel2">
 <li><a href="#_target_audience">Target audience</a></li>
@@ -486,6 +487,16 @@ License</a>.</p>
 <div class="paragraph">
 <p>Please note that because this is a <strong>No Derivatives</strong> license, you may <strong>not</strong> use
 this repository as a basis for creating your own book based on this one.</p>
+</div>
+</div>
+</div>
+<div class="sect1">
+<h2 id="contributing">Contributing</h2>
+<div class="sectionbody">
+<div class="paragraph">
+<p>Visit Babashka cookbook&#8217;s Github repository and read
+<a href="https://github.com/babashka/cookbook/blob/master/CONTRIBUTING.md">CONTRIBUTING.md</a>
+on how to contribute.</p>
 </div>
 </div>
 </div>
@@ -629,7 +640,7 @@ output on stdout and the <code>:exit</code> code is <code>1</code>.</p>
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2020-06-03 19:53:25 +0200
+Last updated 2020-06-03 20:57:05 +0200
 </div>
 </div>
 <style>
