--- a/index.html
+++ b/index.html
@@ -494,8 +494,8 @@ this repository as a basis for creating your own book based on this one.</p>
 <h2 id="contributing">Contributing</h2>
 <div class="sectionbody">
 <div class="paragraph">
-<p>Visit Babashka cookbook&#8217;s Github repository and read
-<a href="https://github.com/babashka/cookbook/blob/master/CONTRIBUTING.md">CONTRIBUTING.md</a>
+<p>Visit Babashka book&#8217;s Github repository and read
+<a href="https://github.com/babashka/book/blob/master/CONTRIBUTING.md">CONTRIBUTING.md</a>
 on how to contribute.</p>
 </div>
 </div>
