--- a/index.html
+++ b/index.html
@@ -476,12 +476,12 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 </div>
 <div class="imageblock">
 <div class="content">
-<a class="image" href="http://creativecommons.org/licenses/by-nc-nd/3.0/deed.en_US"><img src="http://i.creativecommons.org/l/by-nc-nd/3.0/88x31.png" alt="Creative Commons License"></a>
+<a class="image" href="https://creativecommons.org/licenses/by-nc-nd/3.0/deed.en_US"><img src="https://i.creativecommons.org/l/by-nc-nd/3.0/88x31.png" alt="Creative Commons License"></a>
 </div>
 </div>
 <div class="paragraph">
 <p>This draft of Babashka book is licensed under a
-<a href="http://creativecommons.org/licenses/by-nc-nd/3.0/deed.en_US">Creative Commons
+<a href="https://creativecommons.org/licenses/by-nc-nd/3.0/deed.en_US">Creative Commons
 License</a>.</p>
 </div>
 <div class="paragraph">
