--- a/index.html
+++ b/index.html
@@ -463,7 +463,12 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <li><a href="#_running_babashka">Running babashka</a></li>
 </ul>
 </li>
-<li><a href="#child_processes">Child processes</a></li>
+<li><a href="#child_processes">Child processes</a>
+<ul class="sectlevel2">
+<li><a href="#_clojure_java_shell">clojure.java.shell</a></li>
+<li><a href="#_java_lang_process">java.lang.Process</a></li>
+</ul>
+</li>
 </ul>
 </div>
 </div>
@@ -606,9 +611,13 @@ $ script/compile</code></pre>
 <h2 id="child_processes">Child processes</h2>
 <div class="sectionbody">
 <div class="paragraph">
-<p>There are several ways of creating child processes in babashka. All of them are
-implemented using the <code>java.lang.ProcessBuilder</code> and <code>java.lang.Process</code>
-classes. The easiest way to create a process is via <code>clojure.java.shell</code>:</p>
+<p>There are several ways of creating child processes in babashka. Let&#8217;s start with
+the easiest one.</p>
+</div>
+<div class="sect2">
+<h3 id="_clojure_java_shell">clojure.java.shell</h3>
+<div class="paragraph">
+<p>A common way to shell out to another process is via <code>clojure.java.shell</code>:</p>
 </div>
 <div class="listingblock">
 <div class="content">
@@ -633,7 +642,47 @@ user=&gt; (sh <span class="string"><span class="delimiter">&quot;</span><span cl
 output on stdout and the <code>:exit</code> code is <code>1</code>.</p>
 </div>
 <div class="paragraph">
-<p>For more information on <code>clojure.java.shell</code>, read the <a href="https://clojure.github.io/clojure/clojure.java.shell-api.html">API documentation</a>.</p>
+<p>For more information on <code>clojure.java.shell</code>, read the
+<a href="https://clojure.github.io/clojure/clojure.java.shell-api.html">API documentation</a></p>
+</div>
+</div>
+<div class="sect2">
+<h3 id="_java_lang_process">java.lang.Process</h3>
+<div class="paragraph">
+<p>What if we wanted to start a test runner that watches a source directory and
+executes tests whenever a file changes? Using <code>clojure.java.shell/sh</code> for this
+has a few drawbacks:</p>
+</div>
+<div class="ulist">
+<ul>
+<li>
+<p>We have no control over stopping the watcher process</p>
+</li>
+<li>
+<p>We can&#8217;t see any output from the test runner until the process finishes</p>
+</li>
+</ul>
+</div>
+<div class="paragraph">
+<p>Using <code>java.lang.ProcessBuilder</code> and <code>java.lang.Process</code> gives us the extra
+power we need to overcome these limitations.</p>
+</div>
+<div class="listingblock">
+<div class="content">
+<pre class="CodeRay highlight"><code data-lang="clojure"><span class="error">#</span>!/usr/bin/env bb
+
+(<span class="keyword">defn</span> <span class="function">test-runner-watch</span> []
+  (<span class="keyword">let</span> [cmd [<span class="string"><span class="delimiter">&quot;</span><span class="content">clojure</span><span class="delimiter">&quot;</span></span> <span class="string"><span class="delimiter">&quot;</span><span class="content">-A:kaocha</span><span class="delimiter">&quot;</span></span> <span class="string"><span class="delimiter">&quot;</span><span class="content">-m</span><span class="delimiter">&quot;</span></span> <span class="string"><span class="delimiter">&quot;</span><span class="content">kaocha.runner</span><span class="delimiter">&quot;</span></span> <span class="string"><span class="delimiter">&quot;</span><span class="content">--watch</span><span class="delimiter">&quot;</span></span>]
+        pb (<span class="keyword">doto</span> (ProcessBuilder. cmd)
+             (<span class="keyword">.</span>inheritIO))
+        proc (<span class="keyword">.</span>start pb)]
+    (<span class="keyword">-&gt;</span> (Runtime/getRuntime)
+        (<span class="keyword">.</span>addShutdownHook (Thread. #(<span class="keyword">.</span>destroy proc))))
+    proc))
+
+(<span class="keyword">.</span>waitFor (test-runner-watch))</code></pre>
+</div>
+</div>
 </div>
 </div>
 </div>
