--- a/index.html
+++ b/index.html
@@ -668,7 +668,7 @@ has a few drawbacks:</p>
 power we need to overcome these limitations.</p>
 </div>
 <div class="listingblock">
-<div class="title">test_runner_watch.clj</div>
+<div class="title">test_runner_1.clj</div>
 <div class="content">
 <pre class="CodeRay highlight"><code data-lang="clojure"><span class="error">#</span>!/usr/bin/env bb
 
@@ -866,6 +866,58 @@ it as a <code>java.lang.InputStream</code></td>
 <tr>
 <td><i class="conum" data-value="2"></i><b>2</b></td>
 <td>In case of failures or errors we set AnyBar to red, else to green.</td>
+</tr>
+</table>
+</div>
+<div class="paragraph">
+<p>In some scripts it might be desirable to set the working directory and
+environment variables of the child process. Also it might be the last step in a
+script and you just want to let it run until it finishes:</p>
+</div>
+<div class="listingblock">
+<div class="title">test_runner_4.clj</div>
+<div class="content">
+<pre class="CodeRay highlight"><code data-lang="clojure"><span class="error">#</span>!/usr/bin/env bb
+
+(<span class="keyword">require</span> '[clojure.java.io <span class="symbol">:as</span> io])
+
+(<span class="keyword">def</span> <span class="function">working-dir</span> (<span class="keyword">first</span> <span class="predefined-constant">*command-line-args*</span>)) <i class="conum" data-value="1"></i><b>(1)</b>
+(<span class="keyword">def</span> <span class="function">runner-args</span> (<span class="keyword">rest</span> <span class="predefined-constant">*command-line-args*</span>))  <i class="conum" data-value="2"></i><b>(2)</b>
+
+(<span class="keyword">let</span> [pb (<span class="keyword">doto</span> (ProcessBuilder.
+                (<span class="keyword">into</span> [<span class="string"><span class="delimiter">&quot;</span><span class="content">clojure</span><span class="delimiter">&quot;</span></span> <span class="string"><span class="delimiter">&quot;</span><span class="content">-A:kaocha</span><span class="delimiter">&quot;</span></span> <span class="string"><span class="delimiter">&quot;</span><span class="content">-m</span><span class="delimiter">&quot;</span></span> <span class="string"><span class="delimiter">&quot;</span><span class="content">kaocha.runner</span><span class="delimiter">&quot;</span></span>] runner-args)) <i class="conum" data-value="2"></i><b>(2)</b>
+           (<span class="keyword">.</span>inheritIO) <i class="conum" data-value="3"></i><b>(3)</b>
+           (<span class="keyword">.</span>directory (io/file working-dir))) <i class="conum" data-value="1"></i><b>(1)</b>
+      _ (<span class="keyword">doto</span> (<span class="keyword">.</span>environment pb) <i class="conum" data-value="4"></i><b>(4)</b>
+          (<span class="keyword">.</span>put <span class="string"><span class="delimiter">&quot;</span><span class="content">CI</span><span class="delimiter">&quot;</span></span> <span class="string"><span class="delimiter">&quot;</span><span class="content">false</span><span class="delimiter">&quot;</span></span>))
+      proc (<span class="keyword">.</span>start pb)]
+  (<span class="keyword">-&gt;</span> (Runtime/getRuntime)
+      (<span class="keyword">.</span>addShutdownHook (Thread. #(<span class="keyword">.</span>destroy proc))))
+  (System/exit (<span class="keyword">.</span>waitFor proc))) <i class="conum" data-value="5"></i><b>(5)</b></code></pre>
+</div>
+</div>
+<div class="colist arabic">
+<table>
+<tr>
+<td><i class="conum" data-value="1"></i><b>1</b></td>
+<td>We interpret the first command line arg as the working directory for the test runner</td>
+</tr>
+<tr>
+<td><i class="conum" data-value="2"></i><b>2</b></td>
+<td>Remaining args are passed through to the test runner</td>
+</tr>
+<tr>
+<td><i class="conum" data-value="3"></i><b>3</b></td>
+<td><a href="https://docs.oracle.com/en/java/javase/11/docs/api/java.base/java/lang/ProcessBuilder.html#inheritIO()"><code>.inheritIO</code></a> is a convenience method. According to its documentation: Sets the source and destination for subprocess
+standard I/O to be the same as those of the current Java process.</td>
+</tr>
+<tr>
+<td><i class="conum" data-value="4"></i><b>4</b></td>
+<td>Here we set the child process' environment variable <code>CI</code> to <code>false</code></td>
+</tr>
+<tr>
+<td><i class="conum" data-value="5"></i><b>5</b></td>
+<td>We wait for the process to end and exit with its exit code.</td>
 </tr>
 </table>
 </div>
