--- a/index.html
+++ b/index.html
@@ -921,6 +921,14 @@ standard I/O to be the same as those of the current Java process.</td>
 </tr>
 </table>
 </div>
+<div class="listingblock">
+<div class="content">
+<pre class="CodeRay highlight"><code data-lang="shell">$ test_runner_4.clj ~/projects/carve --watch
+[(.................)(..)]
+7 tests, 19 assertions, 0 failures.
+{:errors 0, :failures 0, :tests 7, :assertions 19}</code></pre>
+</div>
+</div>
 </div>
 </div>
 </div>
