--- a/index.html
+++ b/index.html
@@ -925,8 +925,7 @@ standard I/O to be the same as those of the current Java process.</td>
 <div class="content">
 <pre class="CodeRay highlight"><code data-lang="shell">$ test_runner_4.clj ~/projects/carve --watch
 [(.................)(..)]
-7 tests, 19 assertions, 0 failures.
-{:errors 0, :failures 0, :tests 7, :assertions 19}</code></pre>
+7 tests, 19 assertions, 0 failures.</code></pre>
 </div>
 </div>
 </div>
