--- a/index.html
+++ b/index.html
@@ -466,7 +466,7 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <li><a href="#child_processes">Child processes</a>
 <ul class="sectlevel2">
 <li><a href="#_clojure_java_shell">clojure.java.shell</a></li>
-<li><a href="#_java_lang_process">java.lang.Process</a></li>
+<li><a href="#_java_lang_processbuilder">java.lang.Process(Builder)</a></li>
 </ul>
 </li>
 </ul>
@@ -647,7 +647,7 @@ output on stdout and the <code>:exit</code> code is <code>1</code>.</p>
 </div>
 </div>
 <div class="sect2">
-<h3 id="_java_lang_process">java.lang.Process</h3>
+<h3 id="_java_lang_processbuilder">java.lang.Process(Builder)</h3>
 <div class="paragraph">
 <p>What if we wanted to start a test runner that watches a source directory and
 executes tests whenever a file changes? Using <code>clojure.java.shell/sh</code> for this
